# downloader

./: Cargo.toml  README.md  idm.example.toml
src/: adaptive.rs  ai.rs  config.rs  dashboard.rs  db.rs  engine.rs  fileio.rs  lib.rs  main.rs  models.rs  queue.rs
tauri-ui/: README.md  index.html  package.json
tauri-ui/src/: main.js
tauri-ui/src-tauri/: Cargo.toml  tauri.conf.json
tauri-ui/src-tauri/src/: main.rs
